@@ -540,13 +540,13 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E,  "__18F63J11", { "pic18f63j11", "p18f63j11", "18f63j11" }, 0x6311, 0, 0x60, 0x1ff7,   { -1, -1 },            { 0x1FF8, 0x1FFD },     "18f63j11_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F6390",  { "pic18f6390",  "p18f6390",  "18f6390"  }, 0x6390, 0, 0x60, 0x1fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f6390_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F63J90", { "pic18f63j90", "p18f63j90", "18f63j90" }, 0xb390, 0, 0x60, 0x1ff7,   { -1, -1 },            { 0x1FF8, 0x1FFD },     "18f63j90_g.lkr"  },
-  { PROC_CLASS_PIC16E,  "__18F6393",  { "pic18f6393",  "p18f6393",  "18f6393"  }, 0x6393, 0, 0x60, 0x1fffff, { -1, -1 },            { 0x300000, 0x30000D }, "18f6393_g.lkr"   },
+  { PROC_CLASS_PIC16E,  "__18F6393",  { "pic18f6393",  "p18f6393",  "18f6393"  }, 0x6393, 0, 0x60, 0x1fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f6393_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F6410",  { "pic18f6410",  "p18f6410",  "18f6410"  }, 0x6410, 0, 0x60, 0x3fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f6410_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F64J11", { "pic18f64j11", "p18f64j11", "18f64j11" }, 0x6411, 0, 0x60, 0x3ff7,   { -1, -1 },            { 0x3FF8, 0x3FFD },     "18f64j11_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F64J15", { "pic18f64j15", "p18f64j15", "18f64j15" }, 0xb415, 0, 0x60, -1,       { -1, -1 },            { -1, -1 },             "18f64j15.lkr"    }, /* not documented by Microchip, added in svn rev. #378, see http://osdir.com/ml/hardware.microcontrollers.gnupic/2008-05/msg00013.html */
   { PROC_CLASS_PIC16E,  "__18F6490",  { "pic18f6490",  "p18f6490",  "18f6490"  }, 0x6490, 0, 0x60, 0x3fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f6490_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F64J90", { "pic18f64j90", "p18f64j90", "18f64j90" }, 0xb490, 0, 0x60, 0x3ff7,   { -1, -1 },            { 0x3FF8, 0x3FFD },     "18f64j90_g.lkr"  },
-  { PROC_CLASS_PIC16E,  "__18F6493",  { "pic18f6493",  "p18f6493",  "18f6493"  }, 0x6493, 0, 0x60, 0x1fffff, { -1, -1 },            { 0x300000, 0x30000D }, "18f6493_g.lkr"   },
+  { PROC_CLASS_PIC16E,  "__18F6493",  { "pic18f6493",  "p18f6493",  "18f6493"  }, 0x6493, 0, 0x60, 0x3fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f6493_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F65J10", { "pic18f65j10", "p18f65j10", "18f65j10" }, 0xb510, 0, 0x60, 0x7ff7,   { -1, -1 },            { 0x7FF8, 0x7FFD },     "18f65j10_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F65J11", { "pic18f65j11", "p18f65j11", "18f65j11" }, 0x6511, 0, 0x60, 0x7ff7,   { -1, -1 },            { 0x7FF8, 0x7FFD },     "18f65j11_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F65J15", { "pic18f65j15", "p18f65j15", "18f65j15" }, 0xb515, 0, 0x60, 0xbff7,   { -1, -1 },            { 0xBFF8, 0xBFFD },     "18f65j15_g.lkr"  },
@@ -601,13 +601,13 @@ static struct px pics[] = {
   { PROC_CLASS_PIC16E,  "__18F83J11", { "pic18f83j11", "p18f83j11", "18f83j11" }, 0x8311, 0, 0x60, 0x1ff7,   { -1, -1 },            { 0x1FF8, 0x1FFD },     "18f83j11_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F8390",  { "pic18f8390",  "p18f8390",  "18f8390"  }, 0x8390, 0, 0x60, 0x1fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f8390_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F83J90", { "pic18f83j90", "p18f83j90", "18f83j90" }, 0xc390, 0, 0x60, 0x1ff7,   { -1, -1 },            { 0x1FF8, 0x1FFD },     "18f83j90_g.lkr"  },
-  { PROC_CLASS_PIC16E,  "__18F8393",  { "pic18f8393",  "p18f8393",  "18f8393"  }, 0x8393, 0, 0x60, 0x1fffff, { -1, -1 },            { 0x300000, 0x30000D }, "18f8393_g.lkr"   },
+  { PROC_CLASS_PIC16E,  "__18F8393",  { "pic18f8393",  "p18f8393",  "18f8393"  }, 0x8393, 0, 0x60, 0x1fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f8393_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F8410",  { "pic18f8410",  "p18f8410",  "18f8410"  }, 0x8410, 0, 0x60, 0x3fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f8410_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F84J11", { "pic18f84j11", "p18f84j11", "18f84j11" }, 0x8411, 0, 0x60, 0x3ff7,   { -1, -1 },            { 0x3FF8, 0x3FFD },     "18f84j11_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F84J15", { "pic18f84j15", "p18f84j15", "18f84j15" }, 0xc415, 0, 0x60, -1,       { -1, -1 },            { -1, -1 },             "18f84j15.lkr"    }, /* not documented by Microchip, added in svn rev. #378, see http://osdir.com/ml/hardware.microcontrollers.gnupic/2008-05/msg00013.html */
   { PROC_CLASS_PIC16E,  "__18F8490",  { "pic18f8490",  "p18f8490",  "18f8490"  }, 0x8490, 0, 0x60, 0x3fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f8490_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F84J90", { "pic18f84j90", "p18f84j90", "18f84j90" }, 0xc490, 0, 0x60, 0x3ff7,   { -1, -1 },            { 0x3FF8, 0x3FFD },     "18f84j90_g.lkr"  },
-  { PROC_CLASS_PIC16E,  "__18F8493",  { "pic18f8493",  "p18f8493",  "18f8493"  }, 0x8493, 0, 0x60, 0x1fffff, { -1, -1 },            { 0x300000, 0x30000D }, "18f8493_g.lkr"   },
+  { PROC_CLASS_PIC16E,  "__18F8493",  { "pic18f8493",  "p18f8493",  "18f8493"  }, 0x8493, 0, 0x60, 0x3fff,   { -1, -1 },            { 0x300000, 0x30000D }, "18f8493_g.lkr"   },
   { PROC_CLASS_PIC16E,  "__18F85J10", { "pic18f85j10", "p18f85j10", "18f85j10" }, 0xc510, 0, 0x60, 0x7ff7,   { -1, -1 },            { 0x7FF8, 0x7FFD },     "18f85j10_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F85J11", { "pic18f85j11", "p18f85j11", "18f85j11" }, 0x8511, 0, 0x60, 0x7ff7,   { -1, -1 },            { 0x7FF8, 0x7FFD },     "18f85j11_g.lkr"  },
   { PROC_CLASS_PIC16E,  "__18F85J15", { "pic18f85j15", "p18f85j15", "18f85j15" }, 0xc515, 0, 0x60, 0xbff7,   { -1, -1 },            { 0xBFF8, 0xBFFD },     "18f85j15_g.lkr"  },
