@@ -1,5 +1,10 @@
+2011-07-17  Borut Razem  <borutr@users.sourceforge.net>
+  * libgputils/gpprocessor.c: applied patch gpprocessor.c-3.patch.tar.7z
+    #3544649 - "Incorrect lines in the gpprocessor.c II.",
+    thanks to Molnar Karoly
+
 2011-07-16  Borut Razem  <borutr@users.sourceforge.net>
-  * libgputils/gpprocessor.c: applied patch
+  * libgputils/gpprocessor.c: applied patch gpprocessor.c-2.patch.tar.7z
     #3544649 - "Incorrect lines in the gpprocessor.c II.",
     thanks to Molnar Karoly
 
